--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
     "name": "crazy/crypto",
     "description": "Unified management of common encryption and decryption class",
-    "version": "1.1.1",
     "require": {
-        "php": ">=5.6.0"
+        "php": ">=5.6.0",
+        "ext-openssl": "*"
     },
     "license": "MIT",
     "authors": [
